# PredictHaplo

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  PredictHaplo_externAlign.cpp  README  README.md  config_5V  config_sim  nuc-colors.css
.devcontainer/: devcontainer.json
.github/workflows/: compilation.yml
SCYTHE/: AUTHORS
SCYTHE/include/scythestat/: algorithm.h  datablock.h  defs.h  distributions.h  error.h  ide.h  la.h  lapack.h  matrix.h  matrix.h~  matrix_bidirectional_iterator.h  matrix_forward_iterator.h  matrix_random_access_iterator.h  mozilla.ps  optimize.h  rng.h  smath.h  stat.h
SIMULATED/: HIV1.fas  HIV1.fas.amb  HIV1.fas.ann  HIV1.fas.bwt  HIV1.fas.pac  HIV1.fas.sa  SimReads071411.fasta  align.R  alignedReads.sam  clones.fas  haplosAligned.fasta
docker/: Dockerfile
lib/: CMakeLists.txt  Exception.cpp  ParseStatistics.cpp  binary.cpp  is_alignment_match.cpp  is_cigar_code.cpp  median.cpp  statistics_to_messages.cpp  to_vector_of_ints.cpp
lib/include/phaplo/: Exception.hpp  ParseStatistics.hpp  binary.hpp  is_alignment_match.hpp  is_cigar_code.hpp  median.hpp  statistics_to_messages.hpp  to_vector_of_ints.hpp
lib/tests/: CMakeLists.txt  Exception_Test.cpp  binary_Test.cpp  is_alignment_match_Test.cpp  is_cigar_code_Test.cpp  median_Test.cpp  statistics_to_messages_Test.cpp  to_vector_of_ints_Test.cpp
